# friendbank-bend

./: .env  1  Cargo.toml  README.md  ddbb.txt  err.txt  error.txt  vercel.json
api/: main.rs
api/api/handlers/: mod.rs  transaction.rs
api/api/handlers/accountant/: withdraw.rs
api/middleware/: jwt_auth.rs
src/: models.rs
src/api/handlers/: login.rs  signup.rs
src/api/handlers/accountant/: deposit.rs
src/api/routes/: mod.rs
src/services/: mod.rs  transaction_service.rs  user_service.rs
src/services/accountant/: deposit.rs  withdraw.rs
