[package]
name = "friendbank"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "rust_decimal",
] }
dotenv = "0.15"
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "8"
chrono = "0.4"
actix-web-httpauth = "0.8"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.3.1"
futures-util = "0.3"
vercel_runtime = "1.1.4"

[[bin]]
name = "deposit"
path = "api/main.rs"
